[package]
name = "icp_test"
version = "0.1.0"
edition = "2021"

[dependencies]
ic-agent = "0.34"
ic-utils = "0.34"
candid = "1.0"
ic-cdk = "0.13.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2.0"

[dev-dependencies]
tokio = { version = "1.39", features = ["full"] }
